Provide an ability to work with app as anonymous #1665